--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "joi": "^17.2.1",
     "json-groupby": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
+    "lerna": "^3.22.1",
     "morgan": "^1.10.0",
     "next-cookies": "^2.0.3",
     "npm-run-all": "^4.1.5",
